--- a/demos/high-contrast.html
+++ b/demos/high-contrast.html
@@ -28,7 +28,7 @@
       <calcite-navigation-logo
         icon="accessibility"
         slot="logo"
-        heading="Basemap Contrast"
+        heading="High Contrast"
         description="Esri Developer Summit 2024"
       ></calcite-navigation-logo>
         <calcite-action-pad layout="horizontal" expand-disabled slot="content-end">
