fix(reduced-motion): group expand components to only open one widget at a time

--- a/demos/reduced-motion.html
+++ b/demos/reduced-motion.html
@@ -43,10 +43,10 @@
       </calcite-navigation>
       <calcite-panel>
         <arcgis-map id="mapEl" portal-item="81bfc8a612d3426583fb9c93381dae84" zoom="8" basemap="gray" center="-117.87574, 34.31224">
-          <arcgis-expand position="top-left" reference-element="#mapEl">
+          <arcgis-expand group="expand-widgets" position="top-left" reference-element="#mapEl">
             <arcgis-search reference-element="#mapEl"></arcgis-search>
           </arcgis-expand>
-          <arcgis-expand position="top-left" reference-element="#mapEl">
+          <arcgis-expand group="expand-widgets" position="top-left" reference-element="#mapEl">
             <arcgis-bookmarks visible-elements-thumbnail="false"></arcgis-bookmarks>
           </arcgis-expand>
           <arcgis-placement position="top-right" reference-element="#mapEl">
