--- a/demos/reduced-motion.html
+++ b/demos/reduced-motion.html
@@ -18,14 +18,15 @@
   <style>
     html,
     body,
-    #mapEl {
+    #viewDiv {
       padding: 0;
       margin: 0;
       height: 100%;
       width: 100%;
     }
 
-    #dateDiv {
+
+    #titleDiv {
       padding: 10px;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     }
@@ -39,37 +40,27 @@
         description="Esri Developer Summit 2024"></calcite-navigation-logo>
     </calcite-navigation>
     <calcite-panel>
-      <arcgis-map id="mapEl" portal-item="81bfc8a612d3426583fb9c93381dae84" zoom="8" basemap="gray"
-        center="-117.87574, 34.31224">
-        <arcgis-expand group="expand-widgets" position="top-left">
-          <arcgis-search></arcgis-search>
-        </arcgis-expand>
-        <arcgis-expand group="expand-widgets" position="top-left">
-          <arcgis-bookmarks visible-elements-thumbnail="false"></arcgis-bookmarks>
-        </arcgis-expand>
-        <arcgis-placement position="top-right">
-          <arcgis-legend position="top"></arcgis-legend>
-          <div id="dateDiv" class="esri-widget">
-            <p><b>Last updated</b>: <span id="date"></span></p>
-          </div>
-          <button id="worstAQI" class="esri-widget esri-button">Find the worst AQI</button>
-        </arcgis-placement>
-      </arcgis-map>
+      <div id="viewDiv"></div>
+      <div id="titleDiv" class="esri-widget">
+        <div id="legendDiv"></div>
+        <p>Last updated: <span id="date"></span></p>
+        <button id="worstAQI" class="esri-widget esri-button">Find the worst AQI</button>
+      </div>
     </calcite-panel>
   </calcite-shell>
 </body>
 
 <script>
   require([
+    "esri/WebMap",
+    "esri/views/MapView",
     "esri/layers/FeatureLayer",
     "esri/symbols/CIMSymbol",
-  ], (FeatureLayer, CIMSymbol) => {
-    // Check for reduced motion
-    const isReduced = window.matchMedia(`(prefers-reduced-motion: reduce)`) === true || window.matchMedia(`(prefers-reduced-motion: reduce)`).matches === true;
-
-    const mapEl = document.getElementById("mapEl");
-    const bookmarksEl = document.querySelector("arcgis-bookmarks");
-    let view;
+    "esri/widgets/Legend",
+    "esri/widgets/Expand",
+    "esri/widgets/Bookmarks",
+    "esri/widgets/Search"
+  ], (WebMap, MapView, FeatureLayer, CIMSymbol, Legend, Expand, Bookmarks, Search) => {
 
     // create CIMSymbol with provided rgb color
     function createCIMSymbol(r, g, b) {
@@ -82,8 +73,8 @@
             propertyName: "PlayAnimation",
             valueExpressionInfo: {
               type: "CIMExpressionInfo",
-              // Animate if the AQI is greater than 151 and animation is not reduced
-              expression: `$feature.OZONEPM_AQI_SORT >= 151 && !${isReduced}`
+              // only play the animation if AQI is greater than 151 and user does not have reduced motion
+              expression: `$feature.OZONEPM_AQI_SORT >= 151 && !${isReduced()}`
             }
           },
           {
@@ -112,8 +103,7 @@
               url: "https://upload.wikimedia.org/wikipedia/commons/f/fb/Cercle_white_blink.gif",
               animatedSymbolProperties: {
                 primitiveName: "animationOverride",
-                // Only play the animation when user does not have reduced motion
-                playAnimation: true,
+                playAnimation: !isReduced(),
                 duration: 0.75,
                 repeatType: "Loop"
               }
@@ -215,7 +205,7 @@
         minScale: 1500000,
         labelPlacement: "center-center",
         symbol: {
-          type: "text", // Autocasts as new TextSymbol()
+          type: "text", // autocasts as new TextSymbol()
           color: "black",
           font: {
             family: "Avenir Next LT Pro Medium",
@@ -272,140 +262,78 @@
       }
     });
 
-    // Add context from a live feed of smoke detection from NOAA
-    const smokeLayer = new FeatureLayer({
+
+    const map = new WebMap({
       portalItem: {
-        id: "670753899cdb49509b0225496a5b5808"
+        id: "e93e6a9ff5744e15b1c70163b3dbfc6c"
       },
-      legendEnabled: false
+      layers: [aqiLayer] // add layer to the map
     });
 
-    // Map settings
-    mapEl.addEventListener("arcgisViewChange", () => {
-      view = mapEl.view;
-      mapEl.map.constraints = { minScale: 9000000 };
-      mapEl.map.layers = [smokeLayer, aqiLayer];
-
+    const view = new MapView({
+      container: "viewDiv",
+      map,
+      popup: {
+        goToOverride: overrideGoToOptions
+      },
+      center: [-117.87, 34.31],
+      zoom: 8,
+      constraints: {
+        minScale: 9000000
+      }
     });
 
-    // Create custom bookmarks for popular U.S. cities
-    bookmarksEl.addEventListener("arcgisBookmarksReady", (evt) => {
-      evt.target.bookmarks = [
-        ({
-          name: "New York City",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -8277001.093097191,
-              xmax: -8196436.465284584,
-              ymin: 4935204.6169951,
-              ymax: 5003080.698112363
-            }
-          }
-        }),
-        ({
-          name: "Los Angeles",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -13277633.188295119,
-              xmax: -12955374.677044831,
-              ymin: 3896164.583765612,
-              ymax: 4167668.908234545
-            }
-          }
-        }),
-        ({
-          name: "Chicago",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -9828513.4088763,
-              xmax: -9667384.153251227,
-              ymin: 5069717.077609119,
-              ymax: 5205469.239843526
-            }
-          }
-        }),
-        ({
-          name: "Seattle",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -13807750.31225708,
-              xmax: -13485491.801006792,
-              ymin: 5869795.820046695,
-              ymax: 6141300.144515628
-            }
-          }
-        }),
-        ({
-          name: "Houston",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -10726402.850273041,
-              xmax: -10506569.95692479,
-              ymin: 3405510.7425089506,
-              ymax: 3540345.6604040535
-            }
-          }
-        }),
-        ({
-          name: "Phoenix",
-          viewpoint: {
-            targetGeometry: {
-              type: "extent",
-              spatialReference: {
-                wkid: 102100
-              },
-              xmin: -12586137.43292289,
-              xmax: -12366304.53957464,
-              ymin: 3887587.260435651,
-              ymax: 4022422.178330754
-            }
-          }
+    const legend = new Legend({
+      view,
+      container: "legendDiv"
+    });
+    view.ui.add("titleDiv", "top-right");
+
+    view.ui.add(new Expand({
+      view,
+      group: "left",
+      content: new Bookmarks({ view, visibleElements: { thumbnail: false }, goToOverride: overrideGoToOptions })
+    }), "top-left");
+
+    view.ui.add(new Expand({
+      view,
+      group: "left",
+      content: new Search({ view, goToOverride: overrideGoToOptions })
+    }), "top-left");
+
+    view.whenLayerView(aqiLayer).then((aqiLayerView) => {
+      document.getElementById("date").innerHTML = aqiLayer.editingInfo.lastEditDate.toLocaleString();
+      const worstBtn = document.getElementById("worstAQI");
+      worstBtn.addEventListener("click", () => {
+        // query for the highest AQI and navigate the user to that feature
+        const query = {
+          where: "1=1",
+          orderByFields: ["OZONEPM_AQI_SORT DESC"],
+          outFields: ["OZONEPM_AQI_SORT"],
+          num: 1,
+          returnGeometry: true
+        };
+        aqiLayerView.queryFeatures(query).then((results) => {
+
+          const worst = results.features[0];
+          if (worst) view.goTo(worst, { animate: !isReduced() });
         })
-      ];
+      })
     });
+    function isReduced() {
+      return window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    }
 
-    // Update the date when the layer view is created
-    mapEl.addEventListener("arcgisViewLayerviewCreate", () => {
-      view.whenLayerView(aqiLayer).then((aqiLayerView) => {
-        document.getElementById("date").innerHTML = aqiLayer.editingInfo.lastEditDate.toLocaleString();
-        const worstBtn = document.getElementById("worstAQI");
-        worstBtn.addEventListener("click", () => {
-          // Query for the highest AQI and navigate the user to the feature
-          const query = {
-            where: "1=1",
-            orderByFields: ["OZONEPM_AQI_SORT DESC"],
-            outFields: ["OZONEPM_AQI_SORT"],
-            num: 1,
-            returnGeometry: true
-          };
-          aqiLayerView.queryFeatures(query).then((results) => {
-            const worstAirResult = results.features[0];
-            view.goTo(worstAirResult);
-          });
-        });
+    function overrideGoToOptions(view, goToParams) {
+
+      const { target, options } = goToParams;
+
+      return view.goTo(target, {
+        ...options,
+        animate: !isReduced(),
       });
-    });
 
+    }
   });
 </script>
 
