fix(reduced-motion): html doctype

--- a/demos/reduced-motion.html
+++ b/demos/reduced-motion.html
@@ -2,6 +2,8 @@
 <!-- Resources:
   1. Anne Fitz' blog on Visualizing Air Quality with Animated Symbols: https://www.esri.com/arcgis-blog/products/js-api-arcgis/developers/visualizing-air-quality-with-animated-symbols
 -->
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
